--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>WebLottiredPos</title>
   <base href="/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
